Agregue el registro

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
                 </form>
             </mat-card-content>
             <mat-card-actions>
-                <a routerLink="/register" class="register-link">¿No tenes una cuenta? Regístrate</a>
+                <a routerLink="/registro" class="register-link">¿No tenes una cuenta? Regístrate</a>
             </mat-card-actions>
         </mat-card>
     </div>
