--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,4 +1,3 @@
-
 <div class="login-container">
     <div class="background-image"></div>
 
@@ -11,47 +10,54 @@
             <mat-card-content>
                 <form [formGroup]="registroForm" (ngSubmit)="registrar()">
                     <mat-form-field appearance="outline" class="full-width">
-                        <mat-label>Nombre y Apellido</mat-label>
-                        <input matInput formControlName="nombreApellido" placeholder="Ingresa tu nombre y apellido" />
-                        <mat-error *ngIf="registroForm.get('nombreApellido')?.invalid">Nombre y apellido son requeridos</mat-error>
+                        <mat-label>Nombre</mat-label>
+                        <input matInput formControlName="nombre" placeholder="Ingresa tu nombre" />
+                        <mat-error *ngIf="registroForm.get('nombre')?.invalid">El nombre es requerido</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="full-width">
-                        <mat-label>DNI</mat-label>
-                        <input matInput formControlName="dni" placeholder="Ingresa tu DNI" type="text" />
-                        <mat-error *ngIf="registroForm.get('dni')?.invalid">DNI es requerido</mat-error>
+                        <mat-label>Apellido</mat-label>
+                        <input matInput formControlName="apellido" placeholder="Ingresa tu apellido" />
+                        <mat-error *ngIf="registroForm.get('apellido')?.invalid">El apellido es requerido</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="full-width">
-                        <mat-label>Correo electrónico</mat-label>
-                        <input matInput formControlName="email" placeholder="Ingresa tu correo" type="email" />
-                        <mat-error *ngIf="registroForm.get('email')?.invalid">Correo electrónico no válido</mat-error>
+                        <mat-label>Usuario</mat-label>
+                        <input matInput formControlName="username" placeholder="Ingresa tu usuario" />
+                        <mat-error *ngIf="registroForm.get('username')?.invalid">El usuario es requerido</mat-error>
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label>Correo Electrónico</mat-label>
+                        <input matInput formControlName="email" placeholder="Ingresa tu correo electrónico" />
+                        <mat-error *ngIf="registroForm.get('email')?.invalid">El correo electrónico es requerido</mat-error>
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" class="full-width">
+                        <mat-label>Fecha de Nacimiento</mat-label>
+                        <input matInput [matDatepicker]="picker" formControlName="fecha_nacimiento" placeholder="Selecciona tu fecha de nacimiento" />
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="full-width">
                         <mat-label>Contraseña</mat-label>
-                        <input matInput formControlName="password" placeholder="Ingresa tu contraseña" type="password" />
-                        <mat-error *ngIf="registroForm.get('password')?.invalid">Contraseña es requerida</mat-error>
+                        <input matInput type="password" formControlName="password" placeholder="Ingresa tu contraseña" />
+                        <mat-error *ngIf="registroForm.get('password')?.invalid">La contraseña es requerida</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="full-width">
-                        <mat-label>Rol</mat-label>
-                        <mat-select formControlName="rol">
-                            <mat-option value="inquilino">Inquilino</mat-option>
-                            <mat-option value="anfitrion">Anfitrión</mat-option>
+                        <mat-label>Tipo de Usuario</mat-label>
+                        <mat-select formControlName="tipoUsuarios">
+                            <mat-option [value]="3">Anfitrión</mat-option>
+                            <mat-option [value]="2">Inquilino</mat-option>
                         </mat-select>
-                        <mat-error *ngIf="registroForm.get('rol')?.invalid">Debes seleccionar un rol</mat-error>
+                        <mat-error *ngIf="registroForm.get('tipoUsuarios')?.invalid">El tipo de usuario es requerido</mat-error>
                     </mat-form-field>
-                    <div class="button-container">
-                        <button mat-raised-button color="accent" type="submit" [disabled]="registroForm.invalid">Registrarse</button>
-                    </div>
+
+                    <button mat-raised-button color="primary" type="submit">Registrar</button>
                 </form>
             </mat-card-content>
-            <mat-card-actions>
-                <a routerLink="/login" class="register-link">¿Ya tienes una cuenta? Inicia sesión</a>
-            </mat-card-actions>
         </mat-card>
     </div>
 </div>
-
-
