--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('src\assets\turismo-background.jpeg');
+    background-image: url('src/assets/turismo-background.jpeg');
     background-position: center;
     background-size: cover;
     z-index: 1; 
@@ -23,39 +23,10 @@
     padding: 20px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.8);
-}
-
-/* Estilo para los enlaces */
-a {
-    color: #007bff;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    transition: border-color 0.3s, box-shadow 0.3s;
     width: 90%;
-    margin: 10px 0; 
+    max-width: 600px; /* Ajusta el ancho máximo según sea necesario */
 }
 
-mat-card {
-    margin: 10px; 
-    padding: 10px; 
-}
-
-input:focus {
-    border-color: #007bff;
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
-
-/* Estilo para el botón */
 .button-container {
     display: flex;
     justify-content: center;
