arregle el dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
   <div class="main-content">
       <mat-card class="welcome-card">
           <mat-card-content>
-              <h1>Bienvenido/a {{ usuario?.nombre }}</h1>
+              <h1>Bienvenido/a {{ user }}</h1>
 
               <p>Selecciona una opción para comenzar</p>
           </mat-card-content>
