--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,82 +1,82 @@
 <div class="contenido-dashboard">
-  <div class="background-image"></div>
+    <div class="background-image"></div>
 
-  <div class="main-content">
-      <mat-card class="welcome-card">
-          <mat-card-content>
-              <h1>Bienvenido/a {{ user }}</h1>
+    <div class="main-content">
+        <mat-card class="welcome-card">
+            <mat-card-content>
+                <h1>Bienvenido/a {{ user }}</h1>
 
-              <p>Selecciona una opción para comenzar</p>
-          </mat-card-content>
-      </mat-card>
+                <p>Selecciona una opción para comenzar</p>
+            </mat-card-content>
+        </mat-card>
 
-      <div [ngSwitch]="userRole" class="options-grid">
-          <!-- Inquilino -->
-          <div *ngSwitchCase="'INQUILINO'" class="options-container">
-              <mat-card class="option-card" routerLink="/inquilino/reservar-hospedaje">
-                  <mat-icon>event_available</mat-icon>
-                  <h3>Reservar Hospedaje</h3>
-                  <p>Agenda una nueva reserva</p>
-              </mat-card>
+        <div [ngSwitch]="userRole" class="options-grid">
+            <!-- Inquilino -->
+            <!-- <div *ngSwitchCase="'INQUILINO'" class="options-container">
+                <mat-card class="option-card" (click)="openGlobalDialog()">
+                    <mat-icon>event_available</mat-icon>
+                    <h3>Reservar Hospedaje</h3>
+                    <p>Agenda una nueva reserva</p>
+                </mat-card>
 
-              <mat-card class="option-card" routerLink="/inquilino/modificar-reserva">
-                  <mat-icon>calendar_today</mat-icon>
-                  <h3>Modificar Reserva</h3>
-                  <p>Ver y gestionar tus reservas</p>
-              </mat-card>
+                <mat-card class="option-card" (click)="openGlobalDialog()">
+                    <mat-icon>calendar_today</mat-icon>
+                    <h3>Modificar Reserva</h3>
+                    <p>Ver y gestionar tus reservas</p>
+                </mat-card>
 
-              <mat-card class="option-card" routerLink="/inquilino/cancelar-reserva">
-                  <mat-icon>cancel</mat-icon>
-                  <h3>Cancelar Reserva</h3>
-                  <p>Gestiona tus reservas</p>
-              </mat-card>
-          </div>
+                <mat-card class="option-card" (click)="openGlobalDialog()">
+                    <mat-icon>cancel</mat-icon>
+                    <h3>Cancelar Reserva</h3>
+                    <p>Gestiona tus reservas</p>
+                </mat-card>
+            </div> -->
 
-                      <!-- Anfitrion -->
+            <!-- Anfitrion -->
 
-          <div *ngSwitchCase="'ANFITRION'" class="options-container">
-              <mat-card class="option-card" routerLink="/anfitrion/alta-hospedaje">
-                  <mat-icon>add_circle</mat-icon>
-                  <h3>Alta de Hospedaje</h3>
-                  <p>Agrega un nuevo hospedaje</p>
-              </mat-card>
+            <div *ngSwitchCase="'ANFITRION'" class="options-container">
+                <mat-card class="option-card" (click)="openGlobalDialog('alta')">
+                    <mat-icon>add_circle</mat-icon>
+                    <h3>Alta de Hospedaje</h3>
+                    <p>Agrega un nuevo hospedaje</p>
+                </mat-card>
 
-              <mat-card class="option-card" routerLink="/anfitrion/modificacion-hospedaje">
-                  <mat-icon>edit</mat-icon>
-                  <h3>Modificar Hospedaje</h3>
-                  <p>Actualiza la información de tu hospedaje</p>
-              </mat-card>
+                <mat-card class="option-card" (click)="openGlobalDialog('modificacion')">
+                    <mat-icon>edit</mat-icon>
+                    <h3>Modificar Hospedaje</h3>
+                    <p>Actualiza la información de tu hospedaje</p>
+                </mat-card>
 
-              <mat-card class="option-card" routerLink="/anfitrion/eliminar-hospedaje">
-                  <mat-icon>delete</mat-icon>
-                  <h3>Eliminar Hospedaje</h3>
-                  <p>Elimina un hospedaje existente</p>
-              </mat-card>
-          </div>
+                <mat-card class="option-card" (click)="openGlobalDialog('eliminar')">
+                    <mat-icon>delete</mat-icon>
+                    <h3>Eliminar Hospedaje</h3>
+                    <p>Elimina un hospedaje existente</p>
+                </mat-card>
+            </div>
 
-          <!-- Administrador -->
-          <div *ngSwitchCase="'ADMINISTRADOR'" class="options-container">
-              <mat-card class="option-card" routerLink="/admin/gestionar-usuarios">
-                  <mat-icon>admin_panel_settings</mat-icon>
-                  <h3>Gestión de Usuarios</h3>
-                  <p>Administrar usuarios del sistema</p>
-              </mat-card>
+            <!-- Administrador -->
+            <!-- <div *ngSwitchCase="'ADMINISTRADOR'" class="options-container">
+                <mat-card class="option-card" (click)="openGlobalDialog()">
+                    <mat-icon>admin_panel_settings</mat-icon>
+                    <h3>Gestión de Usuarios</h3>
+                    <p>Administrar usuarios del sistema</p>
+                </mat-card>
 
-              <mat-card class="option-card" routerLink="/admin/reportes">
-                  <mat-icon>assessment</mat-icon>
-                  <h3>Ver Reportes</h3>
-                  <p>Accede a los reportes del sistema</p>
-              </mat-card>
-          </div>
+                <mat-card class="option-card" (click)="openGlobalDialog()">
+                    <mat-icon>assessment</mat-icon>
+                    <h3>Ver Reportes</h3>
+                    <p>Accede a los reportes del sistema</p>
+                </mat-card>
+            </div> -->
 
-          <!-- Default -->
-          <div *ngSwitchDefault>
-              <mat-card class="error-card">
-                  <mat-icon color="warn">error</mat-icon>
-                  <h3>Error - Rol no reconocido</h3>
-                  <p>No se han encontrado opciones para tu rol de usuario.</p>
-              </mat-card>
-          </div>
-      </div>
-  </div>
+            <!-- Default -->
+            <div *ngSwitchDefault>
+                <mat-card class="error-card">
+                    <mat-icon color="warn">error</mat-icon>
+                    <h3>Error - Rol no reconocido</h3>
+                    <p>No se han encontrado opciones para tu rol de usuario.</p>
+                </mat-card>
+            </div>
+        </div>
+    </div>
 </div>
