--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,8 +1,8 @@
 .contenido-dashboard {
     padding: 20px;
-    min-height: calc(100vh - 100px);
-    background-image: url('src\assets\turismo-background.jpeg');
-
+    min-height: 100vh;
+    background-image: url('src/assets/fondoHome.png');
+    background-size: cover;
 }
 
 
@@ -14,7 +14,6 @@
     background-color: #e3f2fd;
     border-radius: 15px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
-    border: 2px solid #ff9800;
     transition: transform 0.3s ease;
 }
 
@@ -24,7 +23,13 @@
 
 .welcome-card h1 {
     color: #0d47a1;
-    font-size: 2.5em;
+    font-size: 3.5em;
+    margin-bottom: 15px;
+}
+
+.welcome-card h2 {
+    color: #364f74;
+    font-size: 1.5em;
     margin-bottom: 15px;
 }
 
@@ -54,7 +59,6 @@
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    border: 2px solid #ff9800;
 }
 
 .option-card:hover {
