--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f0f4f8;
 }
 
 .background-image {
@@ -12,65 +13,69 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('src\assets\turismo-background.jpeg');
+    background-image: url('src/assets/fondoHome.png');
+
     background-position: center;
     background-size: cover;
+    opacity: 0.85; 
 }
 
+mat-card-title {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #333;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(9, 50, 197, 0.2);
+}
+
+mat-card-subtitle {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: #555;
+    font-style: italic;
+    text-align: center;
+}
 .login-form-container {
     z-index: 2;
     width: 100%;
     max-width: 400px; 
-    padding: 20px;
-    border-radius: 10px; 
+    padding: 50px;
+    border-radius: 15px; 
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+    background-color: white; 
+    text-align: center; 
 }
 
-.login-card {
-    padding: 20px;
-}
-
-.login-title-container {
-    text-align: center;
+h2 {
+    font-size: 2em;
     margin-bottom: 20px;
+    color: #333;
 }
 
 .full-width {
     width: 100%;
 }
 
-.register-link {
-    margin-top: 15px;
-    display: block;
-    text-align: center;
-    color: #007bff;
-    cursor: pointer;
-    font-weight: 500;
+a{
+    font-size: 18px;
 }
 
-.register-link:hover {
+.button-container {
+    margin-bottom: 50px;
+    margin-top: 20px;
+    button {
+        font-size: 1.2em; 
+        width: 100%;
+        border-radius: 20px;
+    }
+}
+
+.login-link {
+    display: block;
+    margin-top: 15px;
+    color: #007bff;
+}
+
+.login-link:hover {
     text-decoration: underline;
 }
-
-/* Estilo para los inputs */
-.login-form-container input {
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    transition: border-color 0.3s, box-shadow 0.3s;
-    width: 90%;
-}
-
-.login-form-container input:focus {
-    border-color: #007bff;
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
-
-/* Estilo para el botón */
-.button-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
