--- a/src/app/components/registro/registro.component.css
+++ b/src/app/components/registro/registro.component.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f0f4f8;
 }
 
 .background-image {
@@ -12,24 +13,36 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('src/assets/turismo-background.jpeg');
+    background-image: url('src/assets/fondoHome.png');
     background-position: center;
     background-size: cover;
+    opacity: 0.85; 
 }
 
 .login-form-container {
     z-index: 2;
     width: 100%;
-    max-width: 400px; 
-    padding: 20px;
-    border-radius: 10px; 
+    max-width: 600px; /* Aumentar el ancho máximo para dos columnas */
+    padding: 50px;
+    border-radius: 15px; 
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+    background-color: white; 
+    text-align: center; 
 }
 
-.login-card {
-    padding: 20px;
+h2 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    color: #333;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-.login-title-container {
+mat-card-subtitle {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: #555;
+    font-style: italic;
     text-align: center;
 }
 
@@ -37,41 +50,49 @@
     width: 100%;
 }
 
-.register-link {
-    margin-top: 15px;
-    display: block;
-    text-align: center;
-    color: #007bff;
-    cursor: pointer;
-    font-weight: 500;
+.form-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas */
+    gap: 20px; /* Espacio entre columnas */
 }
 
-.register-link:hover {
-    text-decoration: underline;
-}
-
-
-.login-form-container input,
-.login-form-container mat-select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    transition: border-color 0.3s, box-shadow 0.3s;
-    width: 90%;
-    margin: 0; 
-}
-
-.login-form-container input:focus,
-.login-form-container mat-select:focus {
-    border-color: #007bff;
-    outline: none;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+a {
+    font-size: 18px;
 }
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+    button {
+        font-size: 1.2em; 
+        width: 100%;
+        border-radius: 20px;
+    }
 }
 
+mat-card-title {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #333;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px rgba(9, 50, 197, 0.2);
+}
+
+mat-card-subtitle {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    color: #555;
+    font-style: italic;
+    text-align: center;
+}
+
+
+.login-link {
+    display: block;
+    margin-top: 12px;
+    color: #007bff;
+}
+
+.login-link:hover {
+    text-decoration: underline;
+}
