--- a/src/app/components/global-dialog/global-dialog.component.html
+++ b/src/app/components/global-dialog/global-dialog.component.html
@@ -17,6 +17,6 @@
     <h2 id="titulo-dialogo">Eliminar un hospedaje</h2>
     <p id="texto-dialogo">Selecciona una opción:</p>
     <app-eliminar-hospedaje></app-eliminar-hospedaje>
-    <button mat-raised-button color="primary" (click)="onClose()">Cerrar</button>
+    <button mat-raised-button color="warn" (click)="onClose()">Cerrar</button>
   </ng-container>
 </div>
