--- a/src/app/components/anfitrion/eliminar-hospedaje/eliminar-hospedaje.component.html
+++ b/src/app/components/anfitrion/eliminar-hospedaje/eliminar-hospedaje.component.html
@@ -1,1 +1,28 @@
-<p>eliminar-hospedaje works!</p>
+<h2>Lista de Hospedajes</h2>
+<table mat-table [dataSource]="hospedajes" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let hospedaje"> {{ hospedaje.nombre }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let hospedaje"> {{ hospedaje.descripcion }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="precioPorNoche">
+        <th mat-header-cell *matHeaderCellDef> Precio por Noche </th>
+        <td mat-cell *matCellDef="let hospedaje"> {{ hospedaje.precioPorNoche }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let hospedaje">
+            <button mat-button (click)="eliminarHospedaje(hospedaje.id)">Eliminar</button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'precioPorNoche', 'acciones']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['nombre', 'descripcion', 'precioPorNoche', 'acciones'];"></tr>
+</table>
