--- a/src/app/components/anfitrion/eliminar-hospedaje/eliminar-hospedaje.component.html
+++ b/src/app/components/anfitrion/eliminar-hospedaje/eliminar-hospedaje.component.html
@@ -1,11 +1,6 @@
 <h2>Lista de Hospedajes</h2>
 <table mat-table [dataSource]="hospedajes" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let hospedaje"> {{ hospedaje.nombre }} </td>
-    </ng-container>
-
     <ng-container matColumnDef="descripcion">
         <th mat-header-cell *matHeaderCellDef> Descripción </th>
         <td mat-cell *matCellDef="let hospedaje"> {{ hospedaje.descripcion }} </td>
@@ -23,6 +18,6 @@
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['nombre', 'descripcion', 'precioPorNoche', 'acciones']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['nombre', 'descripcion', 'precioPorNoche', 'acciones'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['descripcion', 'precioPorNoche', 'acciones']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['descripcion', 'precioPorNoche', 'acciones'];"></tr>
 </table>
