--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -40,25 +40,25 @@
 
             <!-- Inquilino -->
 
-            <!-- <div *ngSwitchCase="'INQUILINO'" class="options-container">
-                <mat-card class="option-card" (click)="openGlobalDialog()">
+             <div *ngSwitchCase="'INQUILINO'" class="options-container">
+                <mat-card class="option-card" (click)="openGlobalDialog('')">
                     <mat-icon>event_available</mat-icon>
                     <h3>Reservar Hospedaje</h3>
                     <p>Agenda una nueva reserva</p>
                 </mat-card>
 
-                <mat-card class="option-card" (click)="openGlobalDialog()">
+                <mat-card class="option-card" (click)="openGlobalDialog('')">
                     <mat-icon>calendar_today</mat-icon>
                     <h3>Modificar Reserva</h3>
                     <p>Ver y gestionar tus reservas</p>
                 </mat-card>
 
-                <mat-card class="option-card" (click)="openGlobalDialog()">
+                <mat-card class="option-card" (click)="openGlobalDialog('')">
                     <mat-icon>cancel</mat-icon>
                     <h3>Cancelar Reserva</h3>
                     <p>Gestiona tus reservas</p>
                 </mat-card>
-            </div> -->
+            </div> 
 
 
             <!-- Administrador -->
