Agregue el diseño y casi toda la funcionalidad a la reserva de hospedaje de INQUILINO

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -41,7 +41,7 @@
             <!-- Inquilino -->
 
              <div *ngSwitchCase="'INQUILINO'" class="options-container">
-                <mat-card class="option-card" (click)="openGlobalDialog('')">
+                <mat-card class="option-card" (click)="openGlobalDialog('reservarhospedaje')">
                     <mat-icon>event_available</mat-icon>
                     <h3>Reservar Hospedaje</h3>
                     <p>Agenda una nueva reserva</p>
