--- a/src/app/components/editar-mis-datos/editar-mis-datos.component.css
+++ b/src/app/components/editar-mis-datos/editar-mis-datos.component.css
@@ -1,26 +1,48 @@
-.mis-datos-container {
-    padding: 20px;
+body {
     background-image: url('src/assets/fondocasa.jpg');
     background-size: cover;
-    height: 100vh;
+    background-position: center; 
+    height: 100vh; 
+    margin: 0; 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.mis-datos-container {
+    width: 100%;
+    text-align: center;
+    max-width: 600px;
+    background-color: rgba(255, 255, 255, 0.9); 
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+mat-form-field{
+    margin: 5px;
 }
 
 .centered-card {
-    width: 400px;
-    margin: 0 auto;
+    width: 100%;
 }
 
-.loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+.button-container {
     display: flex;
     justify-content: center;
+}
+
+mat-card-header {
+    display: flex;
+    justify-content: center; 
     align-items: center;
-    background: rgba(255, 255, 255, 0.8);
+    padding: 0; 
+    margin-bottom: 15px;
+}
+
+mat-card-title {
+    font-size: x-large;
+    width: 100%; 
+    text-align: center; 
+    margin: 5px; 
 }
