--- a/src/app/components/editar-mis-datos/editar-mis-datos.component.html
+++ b/src/app/components/editar-mis-datos/editar-mis-datos.component.html
@@ -1,3 +1,6 @@
+<body>
+    
+
 <div class="mis-datos-container">
     <mat-card class="centered-card">
         <mat-card-header>
@@ -62,3 +65,5 @@
         <mat-spinner></mat-spinner>
     </div>
 </div>
+
+</body>
